Duelin DQN and agent

--- a/M2_883_RL_PEC2_EnuciadoV2.ipynb
+++ b/M2_883_RL_PEC2_EnuciadoV2.ipynb
@@ -3775,8 +3775,8 @@
    "metadata": {
     "id": "ltuTJg4w1JTA",
     "ExecuteTime": {
-     "end_time": "2024-12-07T16:57:53.578619Z",
-     "start_time": "2024-12-07T16:57:53.572799Z"
+     "end_time": "2024-12-07T23:59:27.493695Z",
+     "start_time": "2024-12-07T23:59:27.485111Z"
     }
    },
    "source": [
@@ -3797,11 +3797,12 @@
     "        ###################################\n",
     "        ####TODO: Inicializar variables####\n",
     "        super(duelingDQN, self).__init__()\n",
-    "        self.device = device if device else ('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "        self.device = torch.device(\"mps\")\n",
     "\n",
-    "        self.n_inputs = #TODO\n",
-    "        self.n_outputs = #TODO\n",
-    "        self.actions = #TODO\n",
+    "        self.n_inputs = env.observation_space.shape[0]\n",
+    "        self.n_outputs = env.action_space.n\n",
+    "        self.actions = np.arange(self.n_outputs)\n",
+    "        self.learning_rate = learning_rate\n",
     "\n",
     "        ######\n",
     "\n",
@@ -3809,47 +3810,51 @@
     "        ##TODO: Construcción de la red neuronal\n",
     "        # Red común\n",
     "        ##Construcción de la red neuronal\n",
+    "        self.model_common = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(self.n_inputs, 256, bias=True),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(256, 128, bias=True),\n",
+    "            torch.nn.ReLU()\n",
+    "        ).to(self.device)\n",
     "\n",
-    "        self.model_common = #TODO\n",
-    "\n",
-    "        # Subred de la función de Valor\n",
     "        self.fc_layer_inputs = self.feature_size()\n",
     "\n",
-    "\n",
-    "        self.advantage  = #TODO\n",
-    "\n",
-    "        # Recordad adaptarlas a cpu o gpu\n",
-    "\n",
     "        # Subred de la Ventaja A(s,a)\n",
-    "        self.value = #TODO\n",
+    "        self.advantage = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(self.fc_layer_inputs, 64, bias=True),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(64, self.n_outputs, bias=True)\n",
+    "        ).to(self.device)\n",
+    "\n",
+    "        # Subred de la función de Valor\n",
+    "        self.value = self.value = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(self.fc_layer_inputs, 64, bias=True),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(64, 1, bias=True)\n",
+    "        ).to(self.device)\n",
     "\n",
     "        #######\n",
     "        #######################################\n",
     "        ##TODO: Inicializar el optimizador\n",
-    "        self.optimizer = #TODO\n",
-    "\n",
+    "        self.optimizer = torch.optim.Adam(self.parameters(), lr=self.learning_rate)\n",
     "\n",
     "    #######################################\n",
     "    #####TODO: función forward#############\n",
     "    def forward(self, state):\n",
     "        # Conexión entre capas de la red común\n",
-    "        common_out = #TODO\n",
+    "        common_out = self.model_common(state)\n",
     "\n",
     "        # Conexión entre capas de la Subred de Valor\n",
-    "        advantage = #TODO\n",
-    "\n",
+    "        advantage = self.advantage(common_out)\n",
     "        # Conexión entre capas de la Subred de Ventaja\n",
-    "        value = #TODO\n",
-    "\n",
+    "        value = self.value(common_out)\n",
     "\n",
     "        ## Agregar las dos subredes:\n",
     "        # Q(s,a) = V(s) + (A(s,a) - 1/|A| * sum A(s,a'))\n",
-    "        action = #TODO\n",
+    "        action = value + (advantage - advantage.mean(dim=0, keepdim=True))\n",
     "\n",
     "        return action\n",
     "    #######\n",
-    "\n",
-    "\n",
     "\n",
     "    ### MéTODO e-greedy\n",
     "    def get_action(self, state, epsilon=0.05):\n",
@@ -3871,17 +3876,8 @@
     "        dummy_input = torch.zeros(1, *env.observation_space.shape).to(self.device)\n",
     "        return self.model_common(autograd.Variable(dummy_input)).view(1, -1).size(1)\n"
    ],
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2877261811.py, line 20)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;36m  Cell \u001B[0;32mIn[624], line 20\u001B[0;36m\u001B[0m\n\u001B[0;31m    self.n_inputs = #TODO\u001B[0m\n\u001B[0m                    ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "execution_count": 624
+   "outputs": [],
+   "execution_count": 652
   },
   {
    "cell_type": "markdown",
@@ -3921,11 +3917,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "id": "I0FuC3kM1JTA"
+    "id": "I0FuC3kM1JTA",
+    "ExecuteTime": {
+     "end_time": "2024-12-07T23:52:07.352322Z",
+     "start_time": "2024-12-07T23:52:07.331010Z"
+    }
    },
-   "outputs": [],
    "source": [
     "class duelingDQNAgent:\n",
     "\n",
@@ -3943,19 +3941,19 @@
     "        nblock: bloque de los X últimos episodios de los que se calculará la media de recompensa\n",
     "        reward_threshold: umbral de recompensa definido en el entorno\n",
     "        \"\"\"\n",
-    "        self.device = device if device else ('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "        self.device = torch.device(\"mps\")\n",
     "        ###############################################################\n",
     "        #####TODO 1: inicialitzar variables######\n",
     "\n",
-    "        self.env = None #TODO\n",
-    "        self.main_network =None #TODO\n",
-    "        self.target_network =None #TODO  # red objetivo (copia de la principal)\n",
-    "        self.buffer =None #TODO\n",
-    "        self.epsilon =None #TODO\n",
-    "        self.eps_decay =None #TODO\n",
-    "        self.batch_size =None #TODO\n",
-    "        self.nblock =None #TODO # bloque de los X últimos episodios de los que se calculará la media de recompensa\n",
-    "        self.reward_threshold = reward_threshold #umbral de recompensa definido en el entorno\n",
+    "        self.env = env\n",
+    "        self.main_network = main_network\n",
+    "        self.target_network = deepcopy(main_network)\n",
+    "        self.buffer = buffer\n",
+    "        self.epsilon = epsilon\n",
+    "        self.eps_decay = eps_decay\n",
+    "        self.batch_size = batch_size\n",
+    "        self.nblock = 100 \n",
+    "        self.reward_threshold = reward_threshold\n",
     "\n",
     "        self.initialize()\n",
     "\n",
@@ -3963,9 +3961,15 @@
     "    ###############################################################\n",
     "    #####TODO 2: inicialitzar variables extra que se necessiten######\n",
     "    def initialize(self):\n",
-    "        pass\n",
-    "        #TODO\n",
-    "\n",
+    "        self.training_rewards = []      \n",
+    "        self.mean_training_rewards = []\n",
+    "        self.update_loss = []\n",
+    "        self.epsilon_history = []\n",
+    "        \n",
+    "        self.total_reward = 0\n",
+    "        self.step_count = 0\n",
+    "        self.state0 = self.env.reset()[0]\n",
+    "        self.episodes_train_dqn = 0\n",
     "\n",
     "\n",
     "\n",
@@ -3973,18 +3977,25 @@
     "    ######TODO 3:  Tomar nueva acción ###############################################\n",
     "    def take_step(self, eps, mode='train'):\n",
     "        if mode == 'explore':\n",
-    "            action = None  # TODO acción aleatoria en el burn-in\n",
+    "            action = self.env.action_space.sample()\n",
     "        else:\n",
-    "           action = None  # TODO  acción a partir del valor de Q (elección de la acción con mejor Q)\n",
+    "            action = self.main_network.get_action(self.state0, eps)  # TODO  acción a partir del valor de Q (elección de la acción con mejor Q)\n",
     "            self.step_count += 1\n",
     "\n",
     "        #TODO: Realización de la acción y obtención del nuevo estado y la recompensa\n",
-    "\n",
+    "        next_state, reward, terminated, truncated, info = self.env.step(action)\n",
+    "        done = terminated or truncated\n",
+    "        \n",
+    "        self.buffer.append(self.state0, action, reward, done, next_state)\n",
+    "        \n",
+    "        self.state0 = next_state\n",
+    "        self.total_reward += reward\n",
     "        #TODO: resetear entorno 'if done'\n",
     "        if done:\n",
-    "            pass #TODO\n",
+    "            self.training_rewards.append(self.total_reward)\n",
+    "            self.state0 = self.env.reset()[0]\n",
+    "            self.total_reward = 0\n",
     "        return done\n",
-    "\n",
     "\n",
     "    ## Entrenamiento\n",
     "    def train(self, gamma=0.99, max_episodes=50000,\n",
@@ -4010,10 +4021,13 @@
     "\n",
     "                #################################################################################\n",
     "                #####TODO 4: Actualizar la red principal según la frecuencia establecida  #######\n",
+    "                if self.step_count % dnn_update_frequency == 0:\n",
+    "                    self.update()\n",
     "\n",
     "                ########################################################################################\n",
     "                ###TODO6: Sincronizar red principal y red objetivo según la frecuencia establecida#####\n",
-    "\n",
+    "                if self.step_count % dnn_sync_frequency == 0:\n",
+    "                    self.target_network.load_state_dict(self.main_network.state_dict())\n",
     "\n",
     "                if gamedone:\n",
     "                    episode += 1\n",
@@ -4023,11 +4037,17 @@
     "                    ####\n",
     "                    self.update_loss = []\n",
     "\n",
-    "\n",
     "                    #######################################################################################\n",
     "                    ###TODO 7: calcular la media de recompensa de los últimos X episodios, y almacenar#####\n",
-    "                    mean_rewards = None\n",
     "                    ###\n",
+    "                    self.episodes_train_dqn = episode\n",
+    "                    \n",
+    "                    # Store metrics (*)\n",
+    "                    mean_rewards = np.mean(self.training_rewards[-self.nblock:])\n",
+    "                    self.mean_training_rewards.append(mean_rewards)\n",
+    "                    self.epsilon_history.append(self.epsilon)\n",
+    "                    \n",
+    "                    print(f\"\\rEpisode {episode} Mean Rewards {mean_rewards:.2f} Epsilon {self.epsilon}\\t\\t\", end=\"\")\n",
     "\n",
     "                    print(\"\\rEpisode {:d} Mean Rewards {:.2f} Epsilon {}\\t\\t\".format(\n",
     "                        episode, mean_rewards, self.epsilon), end=\"\")\n",
@@ -4040,16 +4060,15 @@
     "\n",
     "                    # Termina el juego si la media de recompensas ha llegado al umbral fijado para este juego\n",
     "                    # y se ha entrenado un mínimo de episodios\n",
-    "                    if mean_rewards >= self.reward_threshold and min_episodios <  episode:\n",
+    "                    if mean_rewards >= self.reward_threshold and min_episodios < episode:\n",
     "                        training = False\n",
-    "                        print('\\nEnvironment solved in {} episodes!'.format(\n",
-    "                            episode))\n",
+    "                        print('\\nEnvironment solved in {} episodes!'.format(episode))\n",
     "                        break\n",
     "\n",
     "                    #################################################################################\n",
     "                    ######TODO 8: Actualizar epsilon ########\n",
-    "                    self.epsilon = None\n",
-    "\n",
+    "                    self.epsilon = max(self.epsilon * self.eps_decay, 0.01)\n",
+    "                    \n",
     "     ## Cálculo de la pérdida\n",
     "    def calculate_loss(self, batch):\n",
     "        # Separamos las variables de la experiencia y las convertimos a tensores\n",
@@ -4073,9 +4092,10 @@
     "        qvals_next[dones_t.bool()] = 0\n",
     "        #qvals_next[dones_t] = 0 # 0 en estados terminales\n",
     "        # Calculamos ecuación de Bellman\n",
-    "        expected_qvals = None\n",
+    "        expected_qvals = rewards_vals + self.gamma * qvals_next\n",
     "        #Función Loss #####\n",
     "        loss = torch.nn.MSELoss()(qvals, expected_qvals.reshape(-1,1))\n",
+    "        self.update_loss.append(loss.item())\n",
     "        #######\n",
     "        return loss\n",
     "\n",
@@ -4086,11 +4106,14 @@
     "        loss.backward() # hacemos la diferencia para obtener los gradientes\n",
     "        self.main_network.optimizer.step() # aplicamos los gradientes a la red neuronal\n",
     "        # Guardamos los valores de pérdida\n",
-    "        if self.device == 'cuda':\n",
-    "            self.update_loss.append(loss.detach().cpu().numpy())\n",
+    "        if self.device.type == 'mps':\n",
+    "            loss_value = loss.detach().to('cpu').item()\n",
     "        else:\n",
-    "            self.update_loss.append(loss.detach().numpy())\n"
-   ]
+    "            loss_value = loss.detach().cpu().numpy()\n",
+    "        self.update_loss.append(loss_value)\n"
+   ],
+   "outputs": [],
+   "execution_count": 644
   },
   {
    "cell_type": "markdown",
@@ -4109,15 +4132,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "id": "YzDK0jVGBnyC"
+    "id": "YzDK0jVGBnyC",
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2024-12-07T23:59:32.332513Z"
+    }
    },
-   "outputs": [],
    "source": [
     "#TODO Tiempo ejecución 69 mintuos en google colaboratory con GPU.\n",
-    "#resultado esperado alrededor de 180-200 puntos.\n"
-   ]
+    "#resultado esperado alrededor de 180-200 puntos.\n",
+    "LEARNING_RATE = 0.0005\n",
+    "BATCH_SIZE = 128\n",
+    "MAX_EPISODES = 4000\n",
+    "BURN_IN = 1000\n",
+    "UPDATE_FREQ = 6\n",
+    "SYNC_FREQ = 15\n",
+    "MEMORY_SIZE = 50000\n",
+    "GAMMA = 0.99\n",
+    "EPSILON = 1.0\n",
+    "EPSILON_DECAY = 0.995\n",
+    "\n",
+    "# Calculate REWARD_THRESHOLD\n",
+    "ticker = 'SPY'\n",
+    "start = '2019-01-01'\n",
+    "end = '2021-01-01'\n",
+    "\n",
+    "# Download data to get number of trading days\n",
+    "temp_data = yf.download(ticker, start, end)\n",
+    "num_days = len(temp_data)\n",
+    "print(f\"Numero de dias de trading para {ticker} desde {start} hasta {end}: {num_days}\")\n",
+    "print(f\"Nuestro objetivo ganar el 50 por ciento de los dias: {round(num_days/2)}\")\n",
+    "REWARD_THRESHOLD = 8400\n",
+    "\n",
+    "# Training\n",
+    "print(\"Starting training...\")\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Create environment\n",
+    "dueling_env = StockMarketEnv(ticker=ticker, start=start, end=end)\n",
+    "\n",
+    "# Create experience replay buffer\n",
+    "buffer_dueling = experienceReplayBuffer(memory_size=MEMORY_SIZE, burn_in=BURN_IN)\n",
+    "\n",
+    "# Create neural network\n",
+    "dueling_main_network = duelingDQN(\n",
+    "    env=dueling_env,\n",
+    "    learning_rate=LEARNING_RATE\n",
+    ")\n",
+    "\n",
+    "# Create DQN agent\n",
+    "dueling_agent = duelingDQNAgent(\n",
+    "    env=dueling_env,\n",
+    "    main_network=dueling_main_network,\n",
+    "    buffer=buffer_dueling,\n",
+    "    epsilon=EPSILON,\n",
+    "    eps_decay=EPSILON_DECAY,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    reward_threshold=REWARD_THRESHOLD,\n",
+    ")\n",
+    "\n",
+    "# Train the agent\n",
+    "dueling_agent.train(\n",
+    "    gamma=GAMMA,\n",
+    "    max_episodes=MAX_EPISODES,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    dnn_update_frequency=UPDATE_FREQ,\n",
+    "    dnn_sync_frequency=SYNC_FREQ,\n",
+    "    min_episodios=300,\n",
+    ")"
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero de dias de trading para SPY desde 2019-01-01 hasta 2021-01-01: 505\n",
+      "Nuestro objetivo ganar el 50 por ciento de los dias: 252\n",
+      "Starting training...\n",
+      "Filling replay buffer...\n",
+      "Training...\n",
+      "Episode 77 Mean Rewards 1684.03 Epsilon 0.6832098777212641\t\t"
+     ]
+    }
+   ],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
